endpoint to download directory as zip
